--- a/plugins/FlickrAssets/config.yaml
+++ b/plugins/FlickrAssets/config.yaml
@@ -1,9 +1,9 @@
 name: Flickr Assets
 id: flickrassets
 description: Import and use Flickr photos as native MT assets.
-author_name: Arseni Mouchinski
-author_email: arseni@mouchinski.com
-author_link: http://github.com/amouchinski
+author_name: After6 Services LLC
+author_email: customer.service@after6services.com
+author_link: http://github.com/After6Services
 doc_link: http://github.com/After6Services/mt-plugin-flickr-assets
 icon: plugin_icon.png
 
